<resources>
    <string name="app_name" translatable="false">百媚健康</string>
    <string name="title_home">首页</string>
    <string name="title_shop">商城</string>
    <string name="title_account">个人中心</string>
    <string name="title_loss_tool">健康减肥工具大全</string>
    <string name="title_loss_tool_introduce_1">了解自己</string>
    <string name="title_loss_tool_introduce_2">身体质量</string>
    <string name="title_loss_tool_introduce_3">体重计算</string>
    <string name="title_loss_tool_introduce_4">代谢计算</string>
    <string name="title_loss_tool_introduce_5">体重范围</string>
    <string name="title_loss_tool_introduce_6">运动计算</string>
    <string name="navigation_health">健康</string>
    <string name="navigation_sports">运动</string>
    <string name="navigation_daily">汗水日记</string>
    <string name="navigation_my">我的</string>
    <string name="title_home_health">健康首页</string>
    <string name="title_weight_record">记录体重</string>
    <string name="title_weight_log">体重日志</string>
    <string name="title_user_setting">用户设置</string>
    <string name="title_money_detail">资金明细</string>
    <string name="title_update_nickname">修改昵称</string>
    <string name="title_update_desc">修改个人宣言</string>
    <string name="title_update_login_psw">修改登录密码</string>
    <string name="title_update_pay_psw">修改支付密码</string>
    <string name="title_update_phone">修改手机号</string>
    <string name="title_complete_userinfo">完善您的信息</string>
    <string name="title_order_list">订单列表</string>
    <string name="title_shipping_address_manage">管理收货地址</string>
    <string name="title_shipping_address">收货地址</string>
    <string name="text_weight_record">体   重   记   录</string>
    <string name="text_weight_record_en">WEIGHT RECORD</string>
    <string name="text_target">目标(KG)</string>
    <string name="text_progress">进度</string>
    <string name="text_has_reduce">已减少(公斤)</string>
    <string name="text_target_weight">目标 %s</string>
    <string name="text_intelligent_scale">智能秤</string>
    <string name="text_search_scale">点击搜索智能秤</string>
    <string name="text_other">其他</string>
    <string name="text_input_weight">直接输入体重</string>
    <string name="text_no_more_weight_sacle">当前没有可用的智能秤</string>
    <string name="text_lastest_weight">最新体重</string>
    <string name="text_original_weight">初始体重</string>
    <string name="text_target_weight_2">目标体重</string>
    <string name="text_weight">体重</string>
    <string name="text_fat">脂肪</string>
    <string name="text_water">水分</string>
    <string name="text_muscle">骨骼</string>
    <string name="text_calories">卡路里</string>
    <string name="text_search">搜索</string>
    <string name="text_search_history">搜索历史</string>
    <string name="text_clear">清空</string>
    <string name="text_no_history">暂时没有历史记录</string>
    <string name="text_recode_weight">体重记录</string>
    <string name="text_recode_weight_info">关注每一天的变化</string>
    <string name="text_weight_loss_tool">减肥工具</string>
    <string name="text_weight_loss_tool_info">健康运动必备</string>
    <string name="text_foods">食物库</string>
    <string name="text_foods_info">饮食知识点</string>
    <string name="text_baimei_shop">百媚优选商城</string>
    <string name="text_baimei_shop_info">好物推荐 品质之选</string>
    <string name="text_super_fight_group">超值拼团</string>
    <string name="text_super_fight_group_info">邀请好友一起拼</string>
    <string name="text_brand_flash">品牌闪购</string>
    <string name="text_brand_flash_info">大品牌 低价格</string>
    <string name="text_login_regist">登陆/注册</string>
    <string name="text_default_member_level">达人</string>
    <string name="text_member_level">会员级别</string>
    <string name="text_default_num">0.000</string>
    <string name="text_gold">金币(个)</string>
    <string name="text_has_cost">已消费(元)</string>
    <string name="text_available_gold">可消费金币</string>
    <string name="text_order">订单</string>
    <string name="text_shop_car">购物车</string>
    <string name="text_address">收货地址</string>
    <string name="text_card">资金说明</string>
    <string name="text_erweima">二维码</string>
    <string name="text_friends">我的好友</string>
    <string name="text_login">登录</string>
    <string name="text_wx_login">微信登录</string>
    <string name="text_regiset">注册</string>
    <string name="text_phone">手机号</string>
    <string name="text_password">密码</string>
    <string name="text_record_date">记录时间</string>
    <string name="text_setting_date">设置时间</string>
    <string name="text_target_date">目标时间</string>
    <string name="text_unit_weight">公斤</string>
    <string name="text_unit_weight_en">kg</string>
    <string name="text_unit">单位：</string>
    <string name="text_user_info">用户资料</string>
    <string name="text_user_avatar">头像</string>
    <string name="text_user_nickname">昵称</string>
    <string name="text_user_declaration">我的宣言</string>
    <string name="text_safe_setting">安全设置</string>
    <string name="text_user_login_psd">登录密码</string>
    <string name="text_user_pay_psd">支付密码</string>
    <string name="text_user_phone">手机号码</string>
    <string name="text_user_system_settion">系统设置</string>
    <string name="text_user_version">当前版本</string>
    <string name="text_user_logout">退出登录</string>
    <string name="text_current_assets">当前资产(枚)</string>
    <string name="text_freeze_count">冻结数量(枚)</string>
    <string name="text_useful_money">可用余额(枚)</string>
    <string name="text_user_classification">分类</string>
    <string name="text_username_nickname">用户名/昵称</string>
    <string name="text_username" translatable="false">用户名</string>
    <string name="text_original_psw" translatable="false">原密码</string>
    <string name="text_new_psw" translatable="false">新密码</string>
    <string name="text_check_code" translatable="false">验证码</string>
    <string name="text_old_phone" translatable="false">原手机号</string>
    <string name="text_new_phone" translatable="false">新手机号</string>
    <string name="text_reduce_weight" translatable="false">已减(公斤)</string>
    <string name="text_plus_weight" translatable="false">已增重(公斤)</string>
    <string name="text_sex" translatable="false">性别</string>
    <string name="text_height" translatable="false">身高</string>
    <string name="text_age" translatable="false">年龄</string>
    <string name="text_hip_circumference" translatable="false">臀围</string>
    <string name="text_waistline" translatable="false">腰围</string>
    <string name="text_please" translatable="false">请输入%s</string>
    <string name="text_price" translatable="false">¥%d</string>
    <string name="text_pay" translatable="false">实付：¥%d</string>
    <string name="text_set_default" translatable="false">设为默认</string>
    <string name="text_receiver" translatable="false">收货人</string>
    <string name="text_area" translatable="false">省/市/区</string>
    <string name="text_address_detail" translatable="false">详细地址</string>
    <string name="text_empty_info">守着你离开后的世界，空空如也</string>
    <string name="text_loss_tool_1_title">1分钟了解自己</string>
    <string name="text_loss_tool_1_detail">1分钟了解自己的标准体重，BMI和基础代谢率</string>
    <string name="text_loss_tool_2_title">身体质量指数(BMI)</string>
    <string name="text_loss_tool_2_detail">BMI指数，也叫身体质量指数，衡量是否肥胖重要指标</string>
    <string name="text_loss_tool_3_title">标准体重计算</string>
    <string name="text_loss_tool_3_detail">使用标准体重计算器，轻松算出您的标准体重</string>
    <string name="text_loss_tool_4_title">基础代谢计算</string>
    <string name="text_loss_tool_4_detail">基础代谢率对减肥有非常大的影响，先测算一下吧</string>
    <string name="text_loss_tool_5_title">健康体重范围</string>
    <string name="text_loss_tool_5_detail">健康的体重有助于你保持健康状态先计算一下吧</string>
    <string name="text_loss_tool_6_title">燃脂运动计算</string>
    <string name="text_loss_tool_6_detail">燃脂运动就是燃烧脂肪的运动，怎样才算燃脂运动呢</string>
    <string name="text_recode_weight_hint1">不想错过身体的任何一点变化</string>
    <string name="text_recode_weight_hint2">百媚健康</string>
    <string name="text_recode_weight_hint3">智能体脂称</string>
    <string name="text_recode_weight_buy">立即购买</string>
    <string name="text_recode_weight_btn">上称</string>
    <string name="text_loss_tool_subTitle_1">一分钟彻底了解自己</string>
    <string name="text_loss_tool_introduce_1">1分钟彻底了解自己的标准体重、健康体重范围、BMI指数 (即身体质量指数)、基础代谢 率和燃脂运动中低强度运动心率，看看自己是 否需要减肥了。</string>
    <string name="text_loss_tool_detail_1">身体质量指数(BMI): 评估体重与身高比例的 常用工具，适用范围: 18至65岁的人士。儿童、发育中的青少年、孕妇、乳母、老人及身型健硕的运动员除外</string>
    <string name="text_loss_tool_subTitle_2">BMI身体质量指数</string>
    <string name="text_loss_tool_introduce_2">BMI[Body Mass Index]即BMI指数，也叫身体质量指数，是衡量是否肥胖和标准体重的重要指标。</string>
    <string name="text_loss_tool_detail_2">适用范围: 18至65岁的人士。儿童、发育中的青少年、孕妇、乳母、老人及身型健硕的运动员除外。\n 世界卫生组织认为BMI指数保持在22左右是比较理想的。</string>
    <string name="text_loss_tool_subTitle_3">标准体重计算</string>
    <string name="text_loss_tool_introduce_3">您的体重符合标准吗? 使用标准体重计算器，请在下面选择您的性别年龄和身高，最后计算得出标准体重。</string>
    <string name="text_loss_tool_detail_3"> 计算适用范围: \n 女性: 19岁到65岁,身高在152cm到176cm。 \n 男性: 19岁到65岁,身高在152cm到188cm。</string>
    <string name="text_loss_tool_subTitle_4">基础代谢计算</string>
    <string name="text_loss_tool_introduce_4"> 基础代谢率 (BMR) 是指人体在清醒而又极端安静的状态下，不受肌肉活动、环境温度、食物及精神紧张等影响时的能量代谢率。</string>
    <string name="text_loss_tool_detail_4">基础代谢率对减肥有非常大的影响，每天适量的运动有助于提高身体的基础代谢率，而节食(极端是绝食)会降低人的基础代谢率。通过性别，年龄，身高和体重能粗略计算基础代谢率。</string>
    <string name="text_loss_tool_subTitle_5">健康体重范围</string>
    <string name="text_loss_tool_introduce_5">健康体重不同于标准体重，它是一个范围值，其原理是通过BMI身体质量指数反向推算。</string>
    <string name="text_loss_tool_detail_5">健康范围的身体质量指数(BMI)在18.5到24之间，结合身高，就可以计算出健康体重范围。</string>
    <string name="text_loss_tool_analyse_1">您的身体健康指数(BMI)为：%s</string>
    <string name="text_loss_tool_analyse_sub_1">健康体重BMI</string>
    <string name="text_loss_tool_analyse_2">您的年龄身高对应标准体重为</string>
    <string name="text_loss_tool_analyse_3">您的基础代谢率为</string>
    <string name="text_loss_tool_analyse_4">您的健康体重范围为</string>
    <string name="text_loss_tool_analyse_5">您的中低强度运动心率是</string>
    <string name="text_loss_tool_analyse_say">鲁迅说哒，世界上最好的东西有两样，美好的身体和有趣的灵魂。请保持！</string>
    <string name="text_loss_tool_analyse_say2">警惕, 体重超标, 您处于肥胖范围, 急需减肥。</string>
    <string name="text_loss_tool_analyse_say3">体重过轻</string>
    <string name="text_loss_tool_button">开始计算</string>
    <string name="text_personal_data_setting">个人资料设定</string>
    <string name="text_personal_data_setting_detail">根据你的资料计算你的基础代谢值</string>
    <string name="text_please_go_cheng">请赤脚轻踩上称</string>
    <string name="text_connecting">正在连接</string>
    <string name="text_baiming_recommend">百媚健康评价：</string>
    <string name="text_health_foods_element_detail_element">营养元素</string>
    <string name="text_health_foods_element_detail_component">每100克</string>
    <string name="text_health_foods_element_detail_remark">备注</string>
    <string name="text_loss_tool_subTitle_6">燃脂运动计算</string>
    <string name="text_loss_tool_introduce_6" translatable="false"> 燃脂运动就是燃烧脂肪的运动，需要满足下面三个必要条件: \n 1、该运动要达到中低强度的运动心率;
    \n 2、这种中低强度运动心率的运动要持续20分钟以上;
    \n 3、这种运动必须是大肌肉群的运动，如慢跑、游泳、健身操等。</string>
    <string name="text_loss_tool_detail_6">用下面的计算器，马上得到适合你的中低强度运动心率，低于这个范围或者高于这个范围，都不是以燃烧脂肪供能为主，减脂效果略差。</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_sure">确认</string>
    <string name="btn_update">修改</string>
    <string name="btn_checkcode">发送验证码</string>
    <string name="btn_save">保存</string>
    <string name="btn_pay">付款</string>
    <string name="btn_delete">删除</string>
    <string name="btn_add_address">新增收货地址</string>
    <string name="btn_complete">完成</string>
    <string name="btn_next">下一步</string>
    <string name="btn_submit">提交</string>
    <string name="btn_get_more">点击了解健康减肥</string>
    <string name="btn_share"> &#58915; 给好友也测一下吧</string>
    <string name="hint_home_search">请输入食品名称</string>
    <string name="hint_nickname_words">最多不能超过25个字哦～</string>
    <string name="hint_desc_words">不能超过50个字哦～</string>
    <string name="hint_psw_words">微信注册用户默认密码为 88888888 (8个8)</string>
    <string name="hint_original_psw">请输入当前密码</string>
    <string name="hint_new_psw">请输入新密码 (6-16位字符)</string>
    <string name="hint_input_phone" translatable="false">请输入手机号</string>
</resources>