<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/title_weight_record" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_16dp"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_xxx_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/text_unit_weight_en"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <com.baimeiyx.www.view.Ruler
        android:id="@+id/ruler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8dp"
        android:layout_weight="0.8"
        android:background="@color/colorMainGray"
        android:paddingBottom="@dimen/padding_32dp"
        custom:fromValue="30"
        custom:interval="@dimen/size_8dp"
        custom:intervalsBetweenValues="10"
        custom:linesColor="#33000000"
        custom:linesWidth="@dimen/size_2dp"
        custom:toValue="150"
        custom:valuesInterval="1"
        custom:valuesTextSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/margin_16dp"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/margin_16dp"
            android:text="@string/btn_sure"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>