<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="@dimen/padding_32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_current_assets"
            android:textColor="@color/colorTransparent"
            android:textSize="@dimen/font_s_size" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="999.000"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_xxx_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_freeze_count"
            android:textColor="@color/colorTransparent"
            android:textSize="@dimen/font_s_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_useful_money"
            android:textColor="@color/colorTransparent"
            android:textSize="@dimen/font_s_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/freeze_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_16dp"
            android:text="90.11"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_m_size" />

        <TextView
            android:id="@+id/useful_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_16dp"
            android:text="11.22"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_m_size" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        android:orientation="horizontal"

        android:padding="@dimen/padding_8dp">

        <LinearLayout
            android:id="@+id/ll_classic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom|left"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_classic"
                android:drawablePadding="@dimen/padding_4dp"
                android:gravity="bottom"
                android:text="@string/text_user_classification"
                android:textSize="@dimen/font_s_size" />

            <TextView
                android:id="@+id/tv_text_classic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_4dp"
                android:text="全部"
                android:textSize="@dimen/font_s_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_choose_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tv_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="@dimen/padding_4dp"
                android:gravity="bottom"
                android:text="2018-10"
                android:textSize="@dimen/font_s_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_4dp"
                android:text="至"
                android:textSize="@dimen/font_s_size" />

            <TextView
                android:id="@+id/tv_enddate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2018-10"
                android:textSize="@dimen/font_s_size" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>